# otter-service-standalone

./: .gitignore  Dockerfile  Dockerfile-dev  Dockerfile-remove-uploads-cron  README.md  app.py  cloudbuild.yaml  deploy.sh  docker-pull-otter.sh  index.html  kube-context  remove-uploads-cron  requirements.txt  setup.cfg
deployment/cloud/: _deploy-service-account.sh  _deployment-config-encrypted.yaml  deploy.sh  deployment-config-encrypted.yaml  deployment-service.yaml  deployment.yaml  gcp-workload-identity.sh
deployment/local/: build.sh
otter-service-stdalone/: Chart.yaml  deploy.sh  values.dev.yaml  values.prod.yaml  values.staging.yaml  values.yaml
otter-service-stdalone/templates/: NOTES.txt  _helpers.tpl  certificate.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  issuer.yaml  persistentvolumeclaim.yaml  service.yaml  serviceaccount.yaml  storageclass.yaml
otter-service-stdalone/templates/tests/: test-connection.yaml
src/otter_service_stdalone/: app.py  fs_logging.py  index.html  upload_handle.py
tests/: test_upload_handle.py
tests/files/: hw3.ipynb
tests/files/hw3-submissions-notebooks/: student_2.ipynb  student_3.ipynb
