[metadata]
name = otter_service_stdalone
version = attr: otter_service_stdalone.__version__
author =  Sean Morris
author_email = sean.smorris@berkeley.edu
description = Grading Service for Instructors using Otter Grader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sean-morris/otter-service-stdalone
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data=True
python_requires = >=3.8

[options.packages.find]
where=src

[options.package_data]
otter_service_stdalone: secrets/*.yaml, index.html

[options.entry_points]
console_scripts =
    otter_service_stdalone = otter_service_stdalone.app:main